<resources>
    <string name="app_name">ADF44 Up Button</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="donuts">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_sandwiches">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="change_dessert">Change dessert</string>
    <string name="order_label_text">Order: </string>
    <string name="name_label_text">Name</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="address_label">Address</string>
    <string name="enter_address_hint">Enter your address</string>
    <string name="phone_label">Phone</string>
    <string name="enter_phone_hint">Enter your phone number</string>
    <string name="note_label">Note</string>
    <string name="enter_note_hint">Enter notes</string>
    <string name="delivery_text">Choose a delivery method:</string>
    <string name="sameday_text">Same day messenger service</string>
    <string name="nextday_text">Next day ground delivery</string>
    <string name="pickup_text">Pick up</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="no_item_selected">No Item Selected</string>

    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>
